--- a/etiquetas/incidencia/index.html
+++ b/etiquetas/incidencia/index.html
@@ -319,6 +319,30 @@
   </section>
 
   
+    <section class="section rad-animation-group pb-0" id="casos_margmun">
+      <div class="container rad-fade-down">
+        <div class="row d-flex flex-column-reverse flex-md-row">
+          <div class="about__profile-picture col-12 col-md-6">
+            <img
+              class="lozad img-responsive image-right-overflow"
+              src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+              data-src="https://coronamex.github.io/imagenes/casos_margmun.png"
+              data-srcset="https://coronamex.github.io/imagenes/casos_margmun.png 1x, https://coronamex.github.io/imagenes/casos_margmun@2x.png 2x"
+              alt="Distribución de casos confirmados de COVID-19 de acuerdo al grado de marginación municipal determinad por el CONEVAL en 2015 a lo largo de la epidemia."
+            />
+          </div>
+          <div class="col-12 col-md-6 my-auto my-auto">
+            <h3>Los municipios marginados cada vez más afectados</h3>
+            <p class="lead">
+              <p>La epidemia en México se ha concentrado <a href="../../municipios#vm_casos">en</a> <a href="../../municipios#top_zm_casos">las</a> <a href="../../municipios#top_zm_casos2">zonas</a> <a href="../../municipios#top_zm_casos3">metropolitanas</a> que suelen tener mayor acceso a servicios. Sin embargo con forme ha pasado el tiempo, el número de municipios afectados <a href="../../municipios#n_municipios">ha seguido incrementándose</a>. Esta gráfica muestra como el porcentaje de casos confirmados en residentes de municipios cada vez más marginados ha aumentado progresivamente con el tiempo, aunque todavía representan una proporción menor que la población nacional que vive en estos municipios.</p>
+<p>Es importante notar que estas proporciones son subestimados del verdadero número de personas en situación de marginación que se han contagiado de COVID-19. Esto porque aún cuando las zonas metropolitanas suelen considerarse zonas de muy baja marginación, ya que suelen existir todos los servicios, siempre hay una proporción de la población que vive en estas zonas y carece del acceso a muchos servicios. El único indicador socioeconómico que tenemos a nivel de paciente, es el hablar lengua indígena y se observa que esto <a href="../../clinicos#riesgos_relativos">incrementa el riesgo de fallecer</a> por COVID-19 en México.</p>
+            </p>
+              
+          </div>
+        </div>
+      </div>
+    </section>
+  
     <section class="section rad-animation-group pb-0" id="indigena_incidencia">
       <div class="container rad-fade-down">
         <div class="row d-flex flex-column-reverse flex-md-row">
