--- a/index.html
+++ b/index.html
@@ -425,23 +425,23 @@
       </div>
     </section>
   
-    <section class="section rad-animation-group pb-0" id="indigena_incidencia">
+    <section class="section rad-animation-group pb-0" id="casos_margmun">
       <div class="container rad-fade-down">
         <div class="row d-flex flex-column-reverse flex-md-row">
           <div class="about__profile-picture col-12 col-md-6">
             <img
               class="lozad img-responsive image-right-overflow"
               src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-              data-src="https://coronamex.github.io/imagenes/pob_indigena_exceso_incidencia.png"
-              data-srcset="https://coronamex.github.io/imagenes/pob_indigena_exceso_incidencia.png 1x, https://coronamex.github.io/imagenes/pob_indigena_exceso_incidencia@2x.png 2x"
-              alt=""
+              data-src="https://coronamex.github.io/imagenes/casos_margmun.png"
+              data-srcset="https://coronamex.github.io/imagenes/casos_margmun.png 1x, https://coronamex.github.io/imagenes/casos_margmun@2x.png 2x"
+              alt="Distribución de casos confirmados de COVID-19 de acuerdo al grado de marginación municipal determinad por el CONEVAL en 2015 a lo largo de la epidemia."
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>Las comunidades indígenas son más vulnerables</h3>
+            <h3>Los municipios marginados cada vez más afectados</h3>
             <p class="lead">
-              <p>Los municipios con mayor población <a href="./municipios#incidencia_obs_esp">casi siempre tienen más casos</a>, y dado que la mayoría de las poblaciones indígenas tienen poblaciones pequeñas, uno(a) esperaría que estuvieran más protegidas de la epidemia. Sin embargo, si tomamos en cuenta el tamaño poblacional, la densidad y el número de pruebas realizadas para calcular el <a href="./municipios#mapa_exceso_incidencia"><em>exceso de casos</em></a> por municipio, podemos observar una tendencia (línea azul) en la que municipios con mayor proporción de población indígena, también tienen un mayor <em>exceso de casos</em> que está inevitablemente ligado a la marginación y <a href="./socioeconomicos#coneval_ind">pobreza</a> en estas comunidades.</p>
-<p>Esto no quiere decir que la mayoría de los casos ocurran en comunidades indígenas. De hecho la gran mayoría de los casos se han dado en las <a href="./municipios#top_zm_casos">zonas metropolitanas</a> del país, pero significa que las comunidades indígenas son más vulnerables que otras comunidades con poblaciones similares.</p>
+              <p>La epidemia en México se ha concentrado <a href="./municipios#vm_casos">en</a> <a href="./municipios#top_zm_casos">las</a> <a href="./municipios#top_zm_casos2">zonas</a> <a href="./municipios#top_zm_casos3">metropolitanas</a> que suelen tener mayor acceso a servicios. Sin embargo con forme ha pasado el tiempo, el número de municipios afectados <a href="./municipios#n_municipios">ha seguido incrementándose</a>. Esta gráfica muestra como el porcentaje de casos confirmados en residentes de municipios cada vez más marginados ha aumentado progresivamente con el tiempo, aunque todavía representan una proporción menor que la población nacional que vive en estos municipios.</p>
+<p>Es importante notar que estas proporciones son subestimados del verdadero número de personas en situación de marginación que se han contagiado de COVID-19. Esto porque aún cuando las zonas metropolitanas suelen considerarse zonas de muy baja marginación, ya que suelen existir todos los servicios, siempre hay una proporción de la población que vive en estas zonas y carece del acceso a muchos servicios. El único indicador socioeconómico que tenemos a nivel de paciente, es el hablar lengua indígena y se observa que esto <a href="./clinicos#riesgos_relativos">incrementa el riesgo de fallecer</a> por COVID-19 en México.</p>
             </p>
               
           </div>
