--- a/etiquetas/letalidad/index.html
+++ b/etiquetas/letalidad/index.html
@@ -357,7 +357,8 @@
           <div class="col-12 col-md-6 my-auto my-auto">
             <h3>Letalidad en México</h3>
             <p class="lead">
-              <p>La letalidad es <a href="../../muertes#letalidad">difícil de interpretar</a>. En México podemos calcularla como el número de fallecimientos por cada cien casos (letalidad instantánea), o el número de fallecimientos por cada cien casos <a href="../../clinicos#tiempo_muerte">nueve días antes</a> (letalidad con retraso).</p> <p>La gráfica muestra que estos dos estimadores dan resultados diferentes, lo que indica que ninguno de los dos es confiable en este momento, y por lo tanto no sabemos la letalidad verdadera del COVID-19 en México.</p>
+              <p>La letalidad es <a href="../../muertes#letalidad">difícil de interpretar</a>. En México podemos calcularla como el número de fallecimientos por cada cien casos (letalidad instantánea), o el número de fallecimientos por cada cien casos <a href="../../clinicos#tiempo_muerte">nueve días antes</a> (letalidad con retraso).</p> <p>Al inicio los dos estimados daban resultados diferentes, pero con el tiempo han tendido a converger. Esto es consistente con la observación de que los <a href="../../casos#nacional_sintomas">casos</a> y <a href="../../muertes#muertes_tipomun">fallecimientos</a> están <a href="../../casos#sir">disminuyendo<a>.</p>
+<p>Aún cuando los estimadores de letalidad convergen, este valor es difícil de interpretar ya que ambos son afectados por la cantidad casos y fallecimientos que no son detectados por los sistemas de vigilancia epidemiológica.</p>
             </p>
               
           </div>
