--- a/etiquetas/nacional/index.html
+++ b/etiquetas/nacional/index.html
@@ -417,6 +417,30 @@
       </div>
     </section>
   
+    <section class="section rad-animation-group pb-0" id="ocupacion_hospitalaria">
+      <div class="container rad-fade-down">
+        <div class="row d-flex flex-column-reverse flex-md-row">
+          <div class="about__profile-picture col-12 col-md-6">
+            <img
+              class="lozad img-responsive image-right-overflow"
+              src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+              data-src="https://coronamex.github.io/imagenes/ocupacion_hospitalaria.png"
+              data-srcset="https://coronamex.github.io/imagenes/ocupacion_hospitalaria.png 1x, https://coronamex.github.io/imagenes/ocupacion_hospitalaria@2x.png 2x"
+              alt="La cantidad de gente hospitalizada en la red IRAG de acuerdo al tipo de cama que ha requerido."
+            />
+          </div>
+          <div class="col-12 col-md-6 my-auto my-auto">
+            <h3>Ocupación hospitalaria</h3>
+            <p class="lead">
+              <p>La cantidad de gente hospitalizada en la red IRAG de alcanzó su pico a finales de agosto. Desde entonces ha habido una reducción en el número de pacientes en camas generales, pero el número de pacientes en camas con ventilador (UCI) se ha mantenido estable.</p>
+<p>Estos datos sólo cubren hasta el 6 de septiembre de 2020.</p>
+            </p>
+              
+          </div>
+        </div>
+      </div>
+    </section>
+  
     <section class="section rad-animation-group pb-0" id="casos_def_por_edad">
       <div class="container rad-fade-down">
         <div class="row d-flex flex-column-reverse flex-md-row">
