--- a/clinicos/ocupacion_hospitalaria/index.html
+++ b/clinicos/ocupacion_hospitalaria/index.html
@@ -327,7 +327,7 @@
         <div class="col-12 col-md-6 my-auto my-auto">
           <h2>Ocupación hospitalaria</h2>
           <p class="lead">
-            <p>La cantidad de gente hospitalizada en la red IRAG de alcanzó su pico a finales de agosto. Desde entonces ha habido una reducción en el número de pacientes en camas generales, pero el número de pacientes en camas con ventilador (UCI) se ha mantenido estable.</p>
+            <p>La cantidad de gente hospitalizada en la red IRAG de alcanzó su pico a finales de julio. Desde entonces ha habido una reducción en el número de pacientes en camas generales, pero el número de pacientes en camas con ventilador (UCI) se ha mantenido estable.</p>
 <p>Estos datos sólo cubren hasta el 6 de septiembre de 2020.</p>
           </p>
             
