--- a/etiquetas/nacional/index.html
+++ b/etiquetas/nacional/index.html
@@ -433,7 +433,7 @@
             <h3>Ocupación hospitalaria</h3>
             <p class="lead">
               <p>La cantidad de gente hospitalizada en la red IRAG de alcanzó su pico a finales de julio. Desde entonces ha habido una reducción en el número de pacientes en camas generales, pero el número de pacientes en camas con ventilador (UCI) se ha mantenido estable.</p>
-<p>Estos datos sólo cubren hasta el 6 de septiembre de 2020.</p>
+<p>Estos datos fueron obtenidos a través de la solicitud 0001200360520 en la <a href="https://www.plataformadetransparencia.org.mx/" target="_blank">Plataforma Nacional de Transparencia</a> y sólo cubren hasta el 6 de septiembre de 2020. La respuesta oficial de la Secretaría de Salud y los datos tabulados por entidad federativa se encuentran el <a href="https://github.com/coronamex/datos/tree/master/hospitalizaciones" target="_blank">repositorio de datos</a> de CoronaMex.</p>
             </p>
               
           </div>
