--- a/etiquetas/nacional/index.html
+++ b/etiquetas/nacional/index.html
@@ -432,7 +432,7 @@
           <div class="col-12 col-md-6 my-auto my-auto">
             <h3>Ocupación hospitalaria</h3>
             <p class="lead">
-              <p>La cantidad de gente hospitalizada en la red IRAG de alcanzó su pico a finales de julio. Desde entonces ha habido una reducción en el número de pacientes en camas generales, pero el número de pacientes en camas con ventilador (UCI) se ha mantenido estable.</p>
+              <p>La cantidad de gente hospitalizada en la red IRAG de alcanzó su pico a finales de julio. Desde entonces ha habido una reducción en el número de pacientes en camas generales, pero el número de pacientes en camas con ventilador (UCI) se ha mantenido estable. Estos números incluyen a todos los pacientes hospitalizados con infecciones respiratorias aguda-graves (IRAG) independientemente del resultado de la prueba para COVID-19.</p>
 <p>Estos datos fueron obtenidos a través de la solicitud 0001200360520 en la <a href="https://www.plataformadetransparencia.org.mx/" target="_blank">Plataforma Nacional de Transparencia</a> y sólo cubren hasta el 6 de septiembre de 2020. La respuesta oficial de la Secretaría de Salud y los datos tabulados por entidad federativa se encuentran el <a href="https://github.com/coronamex/datos/tree/master/hospitalizaciones" target="_blank">repositorio de datos</a> de CoronaMex.</p>
             </p>
               
