--- a/clinicos/hosp_estados4/index.html
+++ b/clinicos/hosp_estados4/index.html
@@ -327,8 +327,8 @@
         <div class="col-12 col-md-6 my-auto my-auto">
           <h2>Ocupación hospitalaria estatal (4/4)</h2>
           <p class="lead">
-            <p>Uno de los mayores riesgos de la pandemia de COVID-19 es que la cantidad de gente que requiere hospitalización supere la capacidad material del sistema de salud. Desafortunadamente esto ha ocurrido en varios países resultando en consecuencias fatales.</p>
-<p>En México la capacidad hospitalaria no ha sido completamente superada en ningún momento, pero en diferentes entidades y en diferentes momentos la situación ha sido grave. Estas gráficas muestran la ocupación ocupación y disponibilidad hospitalaria en la red IRAG en cada una de las entidades del país en orden alfabético. Sube o baja en la página para ver más entidades.</p>
+            <p>Estas gráficas muestran la ocupación ocupación y disponibilidad hospitalaria absoluta en la red IRAG en cada una de las entidades federativas del país en orden alfabético hasta el 19 de octubre de 2020. Sube o baja en la página para ver más entidades.</p>
+<p>En México la capacidad hospitalaria no ha sido completamente superada en ningún momento, pero en diferentes entidades y en diferentes momentos la situación ha sido grave.</p>
           </p>
             
         </div>
