--- a/muertes/exceso_mortalidad_estados3/index.html
+++ b/muertes/exceso_mortalidad_estados3/index.html
@@ -327,9 +327,9 @@
         <div class="col-12 col-md-6 my-auto my-auto">
           <h2>Exceso de mortalidad estatal (3/4)</h2>
           <p class="lead">
-            <p>Cada entidad federativa del país tiene característcas propias y una epidemia única. De hecho, la mayoría de las entidades se componen de varias epidemias más pequeñas, y algunas zonas metropolitanas cruzan las líneas estatales.</p>
-<p>Estas gráficas muestran el <a href="#exceso_mortalidad_nacional"><i>exceso de mortalidad</i></a> hasta el 31 de Julio para 8 de las 32 entidades federativas del país. La región con color indica los meses con exceso de mortalidad. Se indica el número absoluto de exceso de mortalidad para canda entidad y el incremento porcentual. Las entidades federativas están organizadas alfabéticamente. Sube o baja en la página para ver más entidades.</p>
-<p>Estos números son preliminares ya que el catálogo nacional de defunciones tarda dos años en finalizarse. Los números de 2020 fueron obtenidos y compartidos por <a href="https://proyecto.li/" target="_blank">PROYECTO Li</a> a partir de solicitudes de acceso a la información. Hay algunas diferencias con el análisis de <b>CoronaMex</b> cuyos detalles están <a href="https://github.com/coronamex/visualizando/blob/master/muertes/exceso_mortalidad.r" target="_blank">aquí</a>.</p>
+            <p>Cada entidad ha sido afectada de diferentes maneras y en diferentes momentos. El <i>exceso de mortalidad</i> nos permite medir el costo humano en cada entidad.</p>
+<p>Estas gráficas muestran el <a href="#exceso_mortalidad_nacional"><i>exceso de mortalidad</i></a> hasta el 26 de septiembre para 8 de las 32 entidades federativas del país. La región con color indica las semanas con <i>exceso de mortalidad</i>. Se indica el número absoluto de exceso de mortalidad para canda entidad y el incremento porcentual. Las entidades federativas están organizadas alfabéticamente. Sube o baja en la página para ver más entidades.</p>
+<p>Estos números son preliminares ya que el catálogo nacional de defunciones tarda dos años en finalizarse.</p>
           </p>
             
         </div>
