Nueva situación en los estados

--- a/etiquetas/mortalidad/index.html
+++ b/etiquetas/mortalidad/index.html
@@ -312,30 +312,41 @@
   
 
   
-  <section class="section rad-animation-group pb-0" id="exceso_mortalidad_estados4">
+  <section class="section rad-animation-group pb-0">
     <div class="container rad-fade-down">
-      <div class="row d-flex flex-column-reverse flex-md-row">
-        <div class="about__profile-picture col-12 col-md-6">
-          <img
-            class="lozad img-responsive image-right-overflow"
-            src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-            data-src="https://coronamex.github.io/imagenes/exceso_mortalidad_estados4.png"
-            data-srcset="https://coronamex.github.io/imagenes/exceso_mortalidad_estados4.png 1x, https://coronamex.github.io/imagenes/exceso_mortalidad_estados4@2x.png 2x"
-            alt="Exceso de mortalidad por la epidemia de COVID-19 en ocho de las entidades federativas de México. El número de defunciones reportadas en el periodo 2012-2018 se compara con el año 2020. En naranja se muestra el período con exceso de mortalidad."
-          />
-        </div>
-        <div class="col-12 col-md-6 my-auto my-auto">
-          <h2>Exceso de mortalidad estatal (4/4)</h2>
-          <p class="lead">
-            <p>Cada entidad ha sido afectada de diferentes maneras y en diferentes momentos. El <i>exceso de mortalidad</i> nos permite medir el costo humano en cada entidad.</p>
-<p>Estas gráficas muestran el <a href="#exceso_mortalidad_nacional"><i>exceso de mortalidad</i></a> hasta el 10 de octubre para 8 de las 32 entidades federativas del país. La región con color indica las semanas con <i>exceso de mortalidad</i>. Se indica el número absoluto de exceso de mortalidad para canda entidad y el incremento porcentual. Las entidades federativas están organizadas alfabéticamente. Sube o baja en la página para ver más entidades.</p>
-<p>Estos números son preliminares ya que el catálogo nacional de defunciones tarda dos años en finalizarse.</p>
-          </p>
-            
-        </div>
-      </div>
+        <h1 align="center">mortalidad</h1>
     </div>
   </section>
+
+  
+    <section class="section rad-animation-group pb-0" id="estados_100mil">
+      <div class="container rad-fade-down">
+        <div class="row d-flex flex-column-reverse flex-md-row">
+          <div class="about__profile-picture col-12 col-md-6">
+            <img
+              class="lozad img-responsive image-right-overflow"
+              src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+              data-src="https://coronamex.github.io/imagenes/estados_100mil.png"
+              data-srcset="https://coronamex.github.io/imagenes/estados_100mil.png 1x, https://coronamex.github.io/imagenes/estados_100mil@2x.png 2x"
+              alt="Gráfica de incidencia y mortalidad por entidad federativa. Primer panel muestra incidencia acumulada por entidad. Segundo panel, incidencia por entidad hace 35-29, 28-22 y 21-15 días. El tercer panel muestra la incidencia los últimos 14 días. Paneles 4, 5 y 6 muestran son equivalentes pero con mortalidad en vez de incidencia"
+            />
+          </div>
+          <div class="col-12 col-md-6 my-auto my-auto">
+            <h3>Situación en los estados</h3>
+            <p class="lead">
+              <p>Los lugares con más población siempre tienen más contagios y por lo tanto el número de casos confirmados no refleja la intensidad epidémica. En cambio, la cantidad de casos y fallecimentos por población son mejores indicadores de la situación.</p>
+<p>Esta gráfica resume la situación en los estados. Se muestra el número de casos y fallecimentos por 100 mil habitantes en cada entidad federativa desde el inicio de la epidemia (barras negras), y en las últimas 5 semanas. Las últimas dos semanas (barras rosadas) son las más importantes como indicadores del riesgo actual de contagio, pero por otro lado los registros en estos días suelen ser <a href="../../clinicos#tiempo_deteccion">incompletos</a>. Por esto, las tres semanas anteriores son un mejor indicador de la tendencia actual y se muestran en verde (casos) y café (defunciones).</p>
+<p>Además puedes consultar la <a href="../../estados#estados_casos1">tendencia</a> <a href="../../estados#estados_casos2">en</a> <a href="../../estados#estados_casos3">cada</a> <a href="../../estados#estados_casos4">entidad</a>.
+El <i>exceso de <a href="../../muertes#exceso_mortalidad_estados1">mortalidad</a></i> <a href="../../muertes#exceso_mortalidad_estados2">en</a> <a href="../../muertes#exceso_mortalidad_estados3">cada</a> <a href="../../muertes#exceso_mortalidad_estados4">entidad</a>.
+La ocupación <a href="../../clinicos#hosp_estados1">hospitalaria</a> <a href="../../clinicos#hosp_estados2">en</a> <a href="../../clinicos#hosp_estados3">cada</a> <a href="../../clinicos#hosp_estados4">entidad</a>.
+La <a href="../../estados#r_efectiva">R efectiva</a> en cada entidad.</p>
+            </p>
+              
+          </div>
+        </div>
+      </div>
+    </section>
+  
 
 
   
