Texto y muertes por región

--- a/etiquetas/nacional/index.html
+++ b/etiquetas/nacional/index.html
@@ -649,8 +649,8 @@
           <div class="col-12 col-md-6 my-auto my-auto">
             <h3>La epidemia se mueve al interior del país</h3>
             <p class="lead">
-              <p>Esta gráfica muestra el número de fallecimientos confirmados por COVID-19 en el país que corresponden al <a href="../../municipios#vm_casos">Valle de México</a>, <a href="../../municipios#top_zm_casos">otras</a> <a href="../../municipios#top_zm_casos2">zonas</a> <a href="../../municipios#top_zm_casos3">metropolitanas</a>, y zonas no metropolitanas. Los fallecimientos empezaron a disminuir desde finales de julio, un par de semanas después de que los <a href="../../casos#sir">casos confirmados</a> empezaran a disminuir.</p>
-<p>La distribución geográfica de la epidemia ha <a href="../../muertes#muertes_region">cambiado con el tiempo</a>. El Valle de México concentró la mayor cantidad de fallecimientos al inicio de la epidemia que posteriormente se extendió al interior del país.</p>
+              <p>Esta gráfica muestra el número de fallecimientos confirmados por COVID-19 en el país que corresponden al <a href="../../municipios#vm_casos">Valle de México</a>, <a href="../../municipios#top_zm_casos">otras</a> <a href="../../municipios#top_zm_casos2">zonas</a> <a href="../../municipios#top_zm_casos3">metropolitanas</a>, y zonas no metropolitanas. Los fallecimientos continúan a la alza a nivel nacional.</p>
+<p>Al principio de la segunda "ola" la mayoría de los nuevos fallecimientos se concentraron en el Valle de México, y aunque las defunciones continúan aumentando, parecen hacerlo más lentamente en días recientes. Lamentablemente, las defunciones en otras zonas metropolitanas aumentan cada vez con mayor rapidez lo que mantiene la tendencia nacional. Probablemente veremos un cambio en la distribución geográfica de la epidemia en las próximas semanas al igual que ocurrió con la <a href="../../muertes#muertes_region">primera "ola"</a>.</p>
 <p>Los fallecimientos confirmados no son la unica consecuencia mortal de la epidemia. El <a href="../../muertes#exceso_mortalidad_nacional">exceso de mortalidad</a> puede usarse para medir las consecuencias directas e indirectas del COVID-19.</p>
             </p>
               
@@ -870,11 +870,11 @@
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>Muertes confirmadas en México</h3>
+            <h3>La segunda ola es diferente</h3>
             <p class="lead">
-              <p>Esta gráfica muestra el número de defunciones confirmadas por COVID-19 en cada una de las ocho <a href="https://es.wikipedia.org/wiki/Anexo:Zonas_económicas_de_México" target="_blank">regiones geográficas</a> del país.</p>
-<p>Los fallecimientos se han distribuido a lo largo del país, pero las regiones Centrosur, Noroeste y Suroeste han sido las más golpeadas. Al igual que con los <a href="../../casos#nacional_sintomas">casos</a>, hay un <a href="../../clinicos#tiempo_deteccion">retraso</a> en la detección de fallecimientos así que es probable que los números en los días recientes aumenten.</p>
-<p>La gráfica muestra que, si bien la epidemia va en descenso, ésta se encuentra generalizada en todo el país. Esto significa que <a href="../../clinicos#riesgos_relativos">todos estamos en riesgo</a> y es consistente con el gran número de <a href="../../municipios#n_municipios">municipios que reportan casos</a>.</p>
+              <p>Cada <a href="https://es.wikipedia.org/wiki/Anexo:Zonas_económicas_de_México" target="_blank">región geográfica</a> del país ha sido afectada de manera diferente y en diferentes momentos.</p>
+<p>La primera "ola" inició en la zona Centrosur, que incluye al <a href="../../municipios#vm_casos">Valle de México</a>, y llegó relativamente tarde a las regiones Centronorte, Noreste y Occidente, pero estas regiones nunca lograron salir de esta primera "ola" antes de la segunda. Por otro lado las regiones Sureste y Suroeste fueron afectadas el verano pasado y, hasta el momento, no han sido afectadas tan gravemente por la segunda "ola", aunque esto siempre puede cambiar.</p>
+<p>De cualquier forma, está claro que hay un incremento generalizado en el número de defunciones a lo largo del país, y todavía no vemos señales de descenso.</p>
             </p>
               
           </div>
