--- a/etiquetas/zona_metropolitana/index.html
+++ b/etiquetas/zona_metropolitana/index.html
@@ -334,8 +334,8 @@
           <div class="col-12 col-md-6 my-auto my-auto">
             <h3>La epidemia se mueve al interior del país</h3>
             <p class="lead">
-              <p>Esta gráfica muestra el número de fallecimientos confirmados por COVID-19 en el país que corresponden al <a href="../../municipios#vm_casos">Valle de México</a>, <a href="../../municipios#top_zm_casos">otras</a> <a href="../../municipios#top_zm_casos2">zonas</a> <a href="../../municipios#top_zm_casos3">metropolitanas</a>, y zonas no metropolitanas. Los fallecimientos empezaron a disminuir desde finales de julio, un par de semanas después de que los <a href="../../casos#sir">casos confirmados</a> empezaran a disminuir.</p>
-<p>La distribución geográfica de la epidemia ha <a href="../../muertes#muertes_region">cambiado con el tiempo</a>. El Valle de México concentró la mayor cantidad de fallecimientos al inicio de la epidemia que posteriormente se extendió al interior del país.</p>
+              <p>Esta gráfica muestra el número de fallecimientos confirmados por COVID-19 en el país que corresponden al <a href="../../municipios#vm_casos">Valle de México</a>, <a href="../../municipios#top_zm_casos">otras</a> <a href="../../municipios#top_zm_casos2">zonas</a> <a href="../../municipios#top_zm_casos3">metropolitanas</a>, y zonas no metropolitanas. Los fallecimientos continúan a la alza a nivel nacional.</p>
+<p>Al principio de la segunda "ola" la mayoría de los nuevos fallecimientos se concentraron en el Valle de México, y aunque las defunciones continúan aumentando, parecen hacerlo más lentamente en días recientes. Lamentablemente, las defunciones en otras zonas metropolitanas aumentan cada vez con mayor rapidez lo que mantiene la tendencia nacional. Probablemente veremos un cambio en la distribución geográfica de la epidemia en las próximas semanas al igual que ocurrió con la <a href="../../muertes#muertes_region">primera "ola"</a>.</p>
 <p>Los fallecimientos confirmados no son la unica consecuencia mortal de la epidemia. El <a href="../../muertes#exceso_mortalidad_nacional">exceso de mortalidad</a> puede usarse para medir las consecuencias directas e indirectas del COVID-19.</p>
             </p>
               
@@ -357,10 +357,10 @@
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>La epidemia se desacelera en el Valle de México</h3>
+            <h3>El Valle de México sigue en un momento crítico</h3>
             <p class="lead">
               <p>La zona metropolitana del Valle de México ha sido por mucho la región más afectada del país, acumulando alrededor de un tercio de los casos confirmados. Esta gráfica muestra los casos de acuerdo la fecha en que mostraron síntomas. Debido a que los casos nuevos se detectan con un <a href="../../clinicos#tiempo_deteccion">retraso típico de 11 días</a>, sólo podemos estar razonablemente seguros del número de casos hace unas dos semanas</p>
-<p>El número de casos nuevos comenzó a estabilizarse alrededor del 15 de mayo, y parece haber empezado a descender en la segunda semana de junio. Por otro lado, los fallecimientos <a href="../../muertes#muertes_tipomun">se mantienen estables</a>. En conjunto esto sugiere que la epidemia ya no está creciendo en esta metrópolis, pero el riesgo sigue siendo de los más altos del país, y <a href="../../municipios#top_zm_casos">otras ciudades</a> han mostrado rebrotes.</p>
+<p>El número de casos se ha mostrado un ligero descenso en los últimos días, pero la tendencia a mediano plazo sigue siendo a la alza, mientras que las defunciones <a href="../../muertes#muertes_tipomun">continúan en aumento</a>. El riesgo sigue siendo de los más altos del país, y <a href="../../municipios#top_zm_casos">otras ciudades</a> han mostrado rebrotes.</p>
 <p>Otras <a href="../../municipios#top_zm_casos">zonas</a> <a href="../../municipios#top_zm_casos2">metropolitanas</a> <a href="../../municipios#top_zm_casos3">también</a> han sido afectadas</p>
             </p>
               
