--- a/secciones/casos/index.html
+++ b/secciones/casos/index.html
@@ -481,10 +481,10 @@
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>La epidemia se desacelera en el Valle de México</h3>
+            <h3>El Valle de México sigue en un momento crítico</h3>
             <p class="lead">
               <p>La zona metropolitana del Valle de México ha sido por mucho la región más afectada del país, acumulando alrededor de un tercio de los casos confirmados. Esta gráfica muestra los casos de acuerdo la fecha en que mostraron síntomas. Debido a que los casos nuevos se detectan con un <a href="../../clinicos#tiempo_deteccion">retraso típico de 11 días</a>, sólo podemos estar razonablemente seguros del número de casos hace unas dos semanas</p>
-<p>El número de casos nuevos comenzó a estabilizarse alrededor del 15 de mayo, y parece haber empezado a descender en la segunda semana de junio. Por otro lado, los fallecimientos <a href="../../muertes#muertes_tipomun">se mantienen estables</a>. En conjunto esto sugiere que la epidemia ya no está creciendo en esta metrópolis, pero el riesgo sigue siendo de los más altos del país, y <a href="../../municipios#top_zm_casos">otras ciudades</a> han mostrado rebrotes.</p>
+<p>El número de casos se ha mostrado un ligero descenso en los últimos días, pero la tendencia a mediano plazo sigue siendo a la alza, mientras que las defunciones <a href="../../muertes#muertes_tipomun">continúan en aumento</a>. El riesgo sigue siendo de los más altos del país, y <a href="../../municipios#top_zm_casos">otras ciudades</a> han mostrado rebrotes.</p>
 <p>Otras <a href="../../municipios#top_zm_casos">zonas</a> <a href="../../municipios#top_zm_casos2">metropolitanas</a> <a href="../../municipios#top_zm_casos3">también</a> han sido afectadas</p>
             </p>
               
