--- a/socioeconomicos/indigena_incidencia/index.html
+++ b/socioeconomicos/indigena_incidencia/index.html
@@ -312,23 +312,23 @@
   
 
   
-  <section class="section rad-animation-group pb-0" id="indigena_incidencia">
+  <section class="section rad-animation-group pb-0" id="indigena_mortalidad">
     <div class="container rad-fade-down">
       <div class="row d-flex flex-column-reverse flex-md-row">
         <div class="about__profile-picture col-12 col-md-6">
           <img
             class="lozad img-responsive image-right-overflow"
             src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-            data-src="https://coronamex.github.io/imagenes/pob_indigena_exceso_incidencia.png"
-            data-srcset="https://coronamex.github.io/imagenes/pob_indigena_exceso_incidencia.png 1x, https://coronamex.github.io/imagenes/pob_indigena_exceso_incidencia@2x.png 2x"
+            data-src="https://coronamex.github.io/imagenes/pob_indigena_mortalidad.png"
+            data-srcset="https://coronamex.github.io/imagenes/pob_indigena_mortalidad.png 1x, https://coronamex.github.io/imagenes/pob_indigena_mortalidad@2x.png 2x"
             alt=""
           />
         </div>
         <div class="col-12 col-md-6 my-auto my-auto">
-          <h2>Las comunidades indígenas son más vulnerables</h2>
+          <h2>Indígenas tienen menor riesgo en sus comunidades</h2>
           <p class="lead">
-            <p>Los municipios con mayor población <a href="../../municipios#incidencia_obs_esp">casi siempre tienen más casos</a>, y dado que la mayoría de las poblaciones indígenas tienen poblaciones pequeñas, uno(a) esperaría que estuvieran más protegidas de la epidemia. Sin embargo, si tomamos en cuenta el tamaño poblacional, la densidad y el número de pruebas realizadas para calcular el <a href="../../municipios#mapa_exceso_incidencia"><em>exceso de casos</em></a> por municipio, podemos observar una tendencia (línea azul) en la que municipios con mayor proporción de población indígena, también tienen un mayor <em>exceso de casos</em> que está inevitablemente ligado a la marginación y <a href="../../socioeconomicos#coneval_ind">pobreza</a> en estas comunidades.</p>
-<p>Esto no quiere decir que la mayoría de los casos ocurran en comunidades indígenas. De hecho la gran mayoría de los casos se han dado en las <a href="../../municipios#top_zm_casos">zonas metropolitanas</a> del país, pero significa que las comunidades indígenas son más vulnerables que otras comunidades con poblaciones similares.</p>
+            <p>Al ser relativamente pequeños, los municipios indígenas han reportado relativamente pocos casos y defunciones por COVID-19. La gráfica muestra la mortalidad por COVID-19 en municipios pequeños en relación con población indígena de estos municipios. Aunque hay una ligera tendencia hacia una menor mortalidad en municipios indígenas, esta tendencia es débil pero al menos podemos decir que habitantes de municipios indígenas tienen un nivel de riesgo similar a otros municipios pequeños.</p>
+<p>Esto no quiere decir las personas indígenas tengan el mismo riesgo que quienes no son indígenas. Después de todo, muchos indígenas viven en zonas metropolitanas. De hecho, el ser indígena en México, incremente el <a href="../../clinicos#riesgos_relativos">riesgo de fallecer por COVID-19</a> en un 20% en promedio. En otras palabras, los indígenas se encuentran en una situación riesgo elevado por la pandemia, pero este riesgo disminuye para aquéllos que viven en comunidades predominantemente indígenas.</p>
           </p>
             
         </div>
