--- a/etiquetas/mortalidad/index.html
+++ b/etiquetas/mortalidad/index.html
@@ -347,6 +347,31 @@ La <a href="../../estados#r_efectiva">R efectiva</a> en cada entidad.</p>
       </div>
     </section>
   
+    <section class="section rad-animation-group pb-0" id="mapa_mortalidad_municipal">
+      <div class="container rad-fade-down">
+        <div class="row d-flex flex-column-reverse flex-md-row">
+          <div class="about__profile-picture col-12 col-md-6">
+            <img
+              class="lozad img-responsive image-right-overflow"
+              src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+              data-src="https://coronamex.github.io/imagenes/mapa_mortalidad_municipal.png"
+              data-srcset="https://coronamex.github.io/imagenes/mapa_mortalidad_municipal.png 1x, https://coronamex.github.io/imagenes/mapa_mortalidad_municipal@2x.png 2x"
+              alt=""
+            />
+          </div>
+          <div class="col-12 col-md-6 my-auto my-auto">
+            <h3>La pandemia ha llegado a todo el país</h3>
+            <p class="lead">
+              <p>El <a href="../../municipios#n_municipios">número de municipios con transmisión activa</a> es uno de los mejores indicadores de la extensión territorial de la epidemia en un momento determinado. Sin embargo, el número total de municipios afectados a lo largo de los meses que ha durado la emergencia sanitaria, es mucho mayor que el número de municipios con transmisión activa en un momento específico.</p>
+<p>Este mapa muestra la mortalidad por municipio de residencia municipal desde el principio de la epidemia en todo el país. Salvo algunos municipios remotos y poco poblados, se han confirmado muertes por COVID-19 en prácticamente todo el país.</p>
+<p>Esta distribución de mortalidad se explica fundamentalmente por el <a href="../../socioeconomicos#coneval_ind">tamaño poblacional y los niveles de ingreso</a>.</p>
+            </p>
+              
+          </div>
+        </div>
+      </div>
+    </section>
+  
 
 
   
