--- a/secciones/municipios/index.html
+++ b/secciones/municipios/index.html
@@ -468,49 +468,24 @@
       </div>
     </section>
   
-    <section class="section rad-animation-group pb-0" id="incidencia_obs_esp">
+    <section class="section rad-animation-group pb-0" id="mapa_mortalidad_municipal">
       <div class="container rad-fade-down">
         <div class="row d-flex flex-column-reverse flex-md-row">
           <div class="about__profile-picture col-12 col-md-6">
             <img
               class="lozad img-responsive image-right-overflow"
               src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-              data-src="https://coronamex.github.io/imagenes/municipios_obs_esp.png"
-              data-srcset="https://coronamex.github.io/imagenes/municipios_obs_esp.png 1x, https://coronamex.github.io/imagenes/municipios_obs_esp@2x.png 2x"
+              data-src="https://coronamex.github.io/imagenes/mapa_mortalidad_municipal.png"
+              data-srcset="https://coronamex.github.io/imagenes/mapa_mortalidad_municipal.png 1x, https://coronamex.github.io/imagenes/mapa_mortalidad_municipal@2x.png 2x"
               alt=""
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>¿Por qué hay municipios con más casos?</h3>
+            <h3>La pandemia ha llegado a todo el país</h3>
             <p class="lead">
-              <p>A nivel individual, ciertas condiciones crónicas son los mayores <a href="../../clinicos#riesgos_relativos">factores de riesgo</a>. Sin embargo, a nivel de población municipal los factores demográficos y <a href="">socioeconómicos</a> son los determinantes más importantes del riesgo.</p>
-<p>En estas gráficas cada punto es un municipio. Se aprecia que los municipios con mayor población y densidad también tienen más casos. Además, hacer más pruebas también lleva a detectar más contagios. Esto nos permite calcular el número esperado de casos para cualquier combinación de población, densidad y número de pruebas. La parte inferior derecha de la imagen compara este número esperado con el número de casos observados en cada municipio.</p>
-<p>Aunque la mayoría de los municipios caen alrededor de la diagonal azul, esto no descarta que haya otros factores de riesgo poblacional. De hecho, hay una <a href="../../municipios#mapa_exceso_incidencia">agrupación geográfica</a> de municipios con un exceso de casos, y estos municipios suelen ser <a href="../../socioeconomicos#coneval_ind">más pobres</a>, y tener <a href="../../socioeconomicos#indigena_incidencia">mayor presencia indígena</a>.</p>
-            </p>
-              
-          </div>
-        </div>
-      </div>
-    </section>
-  
-    <section class="section rad-animation-group pb-0" id="mapa_exceso_incidencia">
-      <div class="container rad-fade-down">
-        <div class="row d-flex flex-column-reverse flex-md-row">
-          <div class="about__profile-picture col-12 col-md-6">
-            <img
-              class="lozad img-responsive image-right-overflow"
-              src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-              data-src="https://coronamex.github.io/imagenes/exceso_incidencia_mapa.png"
-              data-srcset="https://coronamex.github.io/imagenes/exceso_incidencia_mapa.png 1x, https://coronamex.github.io/imagenes/exceso_incidencia_mapa@2x.png 2x"
-              alt=""
-            />
-          </div>
-          <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>¿Qué municipios tienen más casos de los esperados?</h3>
-            <p class="lead">
-              <p>La mayoría de los municipios tienen un número de casos que <a href="../../municipios#incidencia_obs_esp">se explica por sus factores demográficos</a>. Sin embargo, las desviaciones con este valor esperado no se distribuyen aleatoriamente.</p>
-<p>Este mapa muestra el <em>exceso de casos</em> por municipio que resulta de dividir los casos observados entre los esperados. Los municipios sin ningún caso no se consideran y están en color gris. El <em>exceso de casos</em> es un factor multiplicativo por lo que un valor de 1 significa que no hay diferencia entre casos observados y esperados, un valor de 2 significaría el doble de casos observados que esperados y un valor de 0.5 (1/2) significa que hay la mitad de casos observados que esperados.</p>
-<p>Vemos que la la región del Altiplano ha tenido menos casos de los que esperaríamos, mientras que las regiones del Noroeste, Centro y Sureste han tenido un <em>exceso de casos</em>. Mas allá del agrupamiento geográfico, los municipios con un mayor <em>exceso de casos</em> también se caracterizan por mayor <a href="../../socioeconomicos#coneval_ind">pobreza</a> y <a href="../../socioeconomicos#indigena_incidencia">presencia indígena</a>.</p>
+              <p>El <a href="../../municipios#n_municipios">número de municipios con transmisión activa</a> es uno de los mejores indicadores de la extensión territorial de la epidemia en un momento determinado. Sin embargo, el número total de municipios afectados a lo largo de los meses que ha durado la emergencia sanitaria, es mucho mayor que el número de municipios con transmisión activa en un momento específico.</p>
+<p>Este mapa muestra la mortalidad por municipio de residencia municipal desde el principio de la epidemia en todo el país. Salvo algunos municipios remotos y poco poblados, se han confirmado muertes por COVID-19 en prácticamente todo el país.</p>
+<p>Esta distribución de mortalidad se explica fundamentalmente por el <a href="../../socioeconomicos#coneval_ind">tamaño poblacional y los niveles de ingreso</a>.</p>
             </p>
               
           </div>
