--- a/muertes/muertes_tipomun/index.html
+++ b/muertes/muertes_tipomun/index.html
@@ -325,10 +325,10 @@
           />
         </div>
         <div class="col-12 col-md-6 my-auto my-auto">
-          <h2>La epidemia se mueve al interior del país</h2>
+          <h2>La segunda &#34;ola&#34; no ha terminado</h2>
           <p class="lead">
             <p>Esta gráfica muestra el número de fallecimientos confirmados por COVID-19 en el país que corresponden al <a href="../../municipios#vm_casos">Valle de México</a>, <a href="../../municipios#top_zm_casos">otras</a> <a href="../../municipios#top_zm_casos2">zonas</a> <a href="../../municipios#top_zm_casos3">metropolitanas</a>, y zonas no metropolitanas. Los fallecimientos continúan a la alza a nivel nacional.</p>
-<p>Al principio de la segunda "ola" la mayoría de los nuevos fallecimientos se concentraron en el Valle de México, y aunque las defunciones continúan aumentando, parecen hacerlo más lentamente en días recientes. Lamentablemente, las defunciones en otras zonas metropolitanas aumentan cada vez con mayor rapidez lo que mantiene la tendencia nacional. Probablemente veremos un cambio en la distribución geográfica de la epidemia en las próximas semanas al igual que ocurrió con la <a href="../../muertes#muertes_region">primera "ola"</a>.</p>
+<p>Al principio de la segunda "ola" la mayoría de los nuevos fallecimientos se concentraron en el Valle de México, y luego se extendieron al interior del país. Llevamos ya semanas de descenso sostenido en el número de defunciones confirmadas lo cual sugiere que la epidemia disminuye a nivel nacional, aunque es posible que el epicentro de la epidemia se mueva a otras <a href="../../muertes#muertes_region">regiones</a>. De cualquier manera, la mortalidad e incidencia permanecen en uno de los niveles más altos de la epidemia, por lo que es necesario mantener todas las precauciones.</p>
 <p>Los fallecimientos confirmados no son la unica consecuencia mortal de la epidemia. El <a href="../../muertes#exceso_mortalidad_nacional">exceso de mortalidad</a> puede usarse para medir las consecuencias directas e indirectas del COVID-19.</p>
           </p>
             
