--- a/index.html
+++ b/index.html
@@ -401,6 +401,30 @@
       </div>
     </section>
   
+    <section class="section rad-animation-group pb-0" id="muertes_mundiales">
+      <div class="container rad-fade-down">
+        <div class="row d-flex flex-column-reverse flex-md-row">
+          <div class="about__profile-picture col-12 col-md-6">
+            <img
+              class="lozad img-responsive image-right-overflow"
+              src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+              data-src="https://coronamex.github.io/imagenes/muertes_mundiales.png"
+              data-srcset="https://coronamex.github.io/imagenes/muertes_mundiales.png 1x, https://coronamex.github.io/imagenes/muertes_mundiales@2x.png 2x"
+              alt="Mortalidad por COVID-19. Ventana deslizante 7 díás. Top 9 paises más resto del mundo"
+            />
+          </div>
+          <div class="col-12 col-md-6 my-auto my-auto">
+            <h3>El mundo ya está en la tercera &#34;ola&#34;</h3>
+            <p class="lead">
+              <p>Ha habido dos grandes "olas" de mortalidad por COVID-19 en lo que va de la pandemia. La primera entre abril y mayo de 2020 y la segunda entre noviembre de 2020 y febrero de 2021. Durante esta segunda etapa llegamos a confirmar cerca de 15 mil defunciones por día debido a COVID-19. Aunque el número de defunciones registradas diariamente no ha regresado a los niveles de la primera "ola", en las últimas semanas vemos un nuevo aumento global en el número de casos, con Brasil como el país con el mayor número reciente de defunciones.</p>
+<p>La gráfica muestra el número de muertes (en una ventana deslizante de 7 días) en los 9 países con la mayor cantidad de muertes confirmadas por COVID-19, así como el resto del Mundo.</p>
+            </p>
+              
+          </div>
+        </div>
+      </div>
+    </section>
+  
     <section class="section rad-animation-group pb-0" id="sir_centinela">
       <div class="container rad-fade-down">
         <div class="row d-flex flex-column-reverse flex-md-row">
