--- a/clinicos/mortalidad_edad_tipomun/index.html
+++ b/clinicos/mortalidad_edad_tipomun/index.html
@@ -312,24 +312,23 @@
   
 
   
-  <section class="section rad-animation-group pb-0" id="casos_def_por_edad">
+  <section class="section rad-animation-group pb-0" id="mortalidad_edad_tipomun">
     <div class="container rad-fade-down">
       <div class="row d-flex flex-column-reverse flex-md-row">
         <div class="about__profile-picture col-12 col-md-6">
           <img
             class="lozad img-responsive image-right-overflow"
             src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-            data-src="https://coronamex.github.io/imagenes/casos_def_por_edad.png"
-            data-srcset="https://coronamex.github.io/imagenes/casos_def_por_edad.png 1x, https://coronamex.github.io/imagenes/casos_def_por_edad@2x.png 2x"
-            alt="Casos nuevos y fallecimientos por día de inicio de síntomas y grupo de edad en México"
+            data-src="https://coronamex.github.io/imagenes/mortalidad_edad_tipomun.png"
+            data-srcset="https://coronamex.github.io/imagenes/mortalidad_edad_tipomun.png 1x, https://coronamex.github.io/imagenes/mortalidad_edad_tipomun@2x.png 2x"
+            alt="Mortalidad en ventana móvil de 7 días y como proporción del máximo de cada &#34;ola&#34; por edad y tipo de municipio días después de cada &#34;ola&#34;."
           />
         </div>
         <div class="col-12 col-md-6 my-auto my-auto">
-          <h2>Mayores de 60 son vulnerables, la vacunación los protege</h2>
+          <h2>La vacunación está funcionando</h2>
           <p class="lead">
-            <p>Aunque todos estamos en riesgo, desde el inicio de la pandemia se detectó que las personas mayores de edad están en mayor riesgo. En México, el riesgo relativo de fallecer por COVID-19 <a href="../../clinicos#riesgos_relativos">se duplica </a> con cada diez años más de edad.</p>
-<p>A lo largo de la pandemia, cerca del 70% de los fallecimientos han ocurrido entre personas de 60 ó mas años, aunque sólo el 20% de los contagios, y el 11% de la población nacional, corresponde a este grupo.</p>
-<p>Afortunadamente, desde principios de abril hemos visto como se reduce la proporción de contagios y fallecimientos entre adultos mayores, lo cuál casi seguro <a href="../../clinicos#mortalidad_edad_tipomun">corresponde al programa de vacunación</a>. Aún falta muchas personas por vacunar, pero es importante que acudamos cuando sea nuestro turno.</p>
+            <p>Para saber si la vacunación está funcionando necesitamos comparar poblaciones que hayan sido vacunadas con otras que no lo hayan sido. En México la vacunación contra COVID-19 inició en adultos de 60 ó más años que residen en municipios no metropolitanos. Observamos que en abril de 2021, después de la segunda "ola", los fallecimientos han empezado a disminuir más rápidamente justo en el grupo de edad que se vacunó primero, y en los municipios que se vacunaros primero. Esta diferencia no ocurrió después de la primera "ola" cuando nadie estaba vacunado, y todavía no se observa en las zonas metropolitanas que se vacunaron después.</p>
+<p>Al mismo tiempo, hemos visto que la proporción de casos y defunciones nacionales que corresponden a personas de 60 ó más años <a href="../../clinicos#casos_def_por_edad">ha disminuido en el mismo período</a>. Todo esto indica que la vacunación está teniendo un efecto directo en el control de la epidemia, pero falta mucha gente por vacunar y es importante que todos nos vacunemos tan pronto como sea nuestro turno.</p>
           </p>
             
         </div>
