--- a/etiquetas/zona_metropolitana/index.html
+++ b/etiquetas/zona_metropolitana/index.html
@@ -332,10 +332,10 @@
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>La segunda &#34;ola&#34; no ha terminado</h3>
+            <h3>La epidemia sigue cobrando vidas</h3>
             <p class="lead">
               <p>Esta gráfica muestra el número de fallecimientos confirmados por COVID-19 en el país que corresponden al <a href="../../municipios#vm_casos">Valle de México</a>, <a href="../../municipios#top_zm_casos">otras</a> <a href="../../municipios#top_zm_casos2">zonas</a> <a href="../../municipios#top_zm_casos3">metropolitanas</a>, y zonas no metropolitanas. Los fallecimientos continúan a la alza a nivel nacional.</p>
-<p>Al principio de la segunda "ola" la mayoría de los nuevos fallecimientos se concentraron en el Valle de México, y luego se extendieron al interior del país. Llevamos ya semanas de descenso sostenido en el número de defunciones confirmadas lo cual sugiere que la epidemia disminuye a nivel nacional, aunque es posible que el epicentro de la epidemia se mueva a otras <a href="../../muertes#muertes_region">regiones</a>. De cualquier manera, la mortalidad e incidencia permanecen en uno de los niveles más altos de la epidemia, por lo que es necesario mantener todas las precauciones.</p>
+<p>Tras varios meses de descenso sostenido en el número de fallecimientos la situación no es crítica a nivel nacional, y hay <a href="../../clinicos#mortalidad_edad_tipomun">buenas</a> <a href="../../clinicos#casos_def_por_edad">señales</a> tempranas del programa de vacunación. Sin embargo, en el mundo sigue <a href="../../mundo#muertes_mundiales">en un momento crítico</a> y siempre existe el riesgo de que la situación empeore rápidamente, por lo que necesario mantener todas las precauciones y vacunarse cuando nos toque.</p>
 <p>Los fallecimientos confirmados no son la unica consecuencia mortal de la epidemia. El <a href="../../muertes#exceso_mortalidad_nacional">exceso de mortalidad</a> puede usarse para medir las consecuencias directas e indirectas del COVID-19.</p>
             </p>
               
@@ -357,10 +357,10 @@
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>El Valle de México sigue en un momento crítico</h3>
+            <h3>El Valle de México ha sido la región más afectada</h3>
             <p class="lead">
               <p>La zona metropolitana del Valle de México ha sido por mucho la región más afectada del país, acumulando alrededor de un tercio de los casos confirmados. Esta gráfica muestra los casos de acuerdo la fecha en que mostraron síntomas. Debido a que los casos nuevos se detectan con un <a href="../../clinicos#tiempo_deteccion">retraso típico de 11 días</a>, sólo podemos estar razonablemente seguros del número de casos hace unas dos semanas</p>
-<p>El número de casos se ha mostrado un ligero descenso en los últimos días, pero la tendencia a mediano plazo sigue siendo a la alza, mientras que las defunciones <a href="../../muertes#muertes_tipomun">continúan en aumento</a>. El riesgo sigue siendo de los más altos del país, y <a href="../../municipios#top_zm_casos">otras ciudades</a> han mostrado rebrotes.</p>
+<p>En los últimos meses, el número de casos, <a href="../../muertes#muertes_tipomun">defunciones</a>, y <a href="../../muertes#exceso_mortalidad_estados1">exceso de mortalidad</a> han mostrado un descenso sostenido, pero sus tasas de transmisión y mortalidad siguen siendo <a href="../../estados#estados_100mil">la más alta del país</a> aún cuando consideramos el tamaño poblacional.</p>
 <p>Otras <a href="../../municipios#top_zm_casos">zonas</a> <a href="../../municipios#top_zm_casos2">metropolitanas</a> <a href="../../municipios#top_zm_casos3">también</a> han sido afectadas</p>
             </p>
               
