--- a/etiquetas/nacional/index.html
+++ b/etiquetas/nacional/index.html
@@ -319,23 +319,23 @@
   </section>
 
   
-    <section class="section rad-animation-group pb-0" id="riesgos_relativos">
+    <section class="section rad-animation-group pb-0" id="riesgos_relativos_prevac">
       <div class="container rad-fade-down">
         <div class="row d-flex flex-column-reverse flex-md-row">
           <div class="about__profile-picture col-12 col-md-6">
             <img
               class="lozad img-responsive image-right-overflow"
               src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-              data-src="https://coronamex.github.io/imagenes/riesgos_relativos.png"
-              data-srcset="https://coronamex.github.io/imagenes/riesgos_relativos.png 1x, https://coronamex.github.io/imagenes/riesgos_relativos@2x.png 2x"
-              alt="Riesgo relativo de hospitalización y de entrar a cuidados intensivos por COVID-19 basado en los casos en México. El estimador de máxima verosimilitud y el intervalo de confianza de 95% son mostrados."
+              data-src="https://coronamex.github.io/imagenes/riesgos_relativos_prevac.png"
+              data-srcset="https://coronamex.github.io/imagenes/riesgos_relativos_prevac.png 1x, https://coronamex.github.io/imagenes/riesgos_relativos_prevac@2x.png 2x"
+              alt="Riesgo relativo de hospitalización y de entrar a cuidados intensivos por COVID-19 basado en los casos en México para personas que mostraron síntomas antes del 1 de abril de 2021. El estimador de máxima verosimilitud y el intervalo de confianza de 95% son mostrados."
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>¿Quién está en riesgo?</h3>
+            <h3>¿Quién está en riesgo? (pre-vacunación)</h3>
             <p class="lead">
-              <p><b>Todos estamos en riesgo</b>. Para el 10 de julio, se ha confirmado el fallecimiento por COVID-19 de 2387 mujeres (edad media de 60 años) y 6410 hombres (edad media de 59 años) para quienes no se reporta ningún otro factor de riesgo. Esto representa el 26% de los fallecimientos confirmados. Es posible que algunas de estas personas hayan tenido comorbilidades no detectadas, pero de todas formas estos números indican que el COVID-19 es una enfermedad peligrosa para todos.</p>
-<p>Sin embargo, hay condiciones demográficas, socioeconómicos y médicas que aumentan el riesgo para una persona con COVID-19. La gráfica muestra el riesgo relativo asociado con varios factores en México. Los resultados son similares a los de otros países: mayor edad, ser hombre, ser indígena, o padecer algunas enfermedades crónicas aumentan el riesgo por COVID-19.</p>
+              <p><b>Todos estamos en riesgo</b>. Una buena parte de los fallecidos no tenían ninguna comorbilidad reportada. Es posible que algunas de estas personas tuvierna comorbilidades sin saberlo, pero de todas formas es claro que el COVID-19 es una enfermedad peligrosa para todos.</p>
+<p>Sin embargo, hay condiciones demográficas, socioeconómicos y médicas que aumentan el riesgo para una persona con COVID-19. La gráfica muestra el riesgo relativo asociado con varios factores en México, para aquellas personas que mostraron síntomas antes del 1 de abril de 2021, ya que una vez que la vacunación masiva empezó a tener efecto, los riesgos disminuyen para los vacunados. Los resultados son similares a los de otros países: mayor edad, ser hombre, ser indígena, o padecer algunas enfermedades crónicas aumentan el riesgo por COVID-19.</p>
 <p>Los detalles para calcular estos estimados están <a href="https://github.com/coronamex/visualizando/blob/master/clinicos/riesgos_relativos.r" target="_blank">aquí</a>.</p>
             </p>
               
